--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#services">Services</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
